Website - Theme: Fix burger menu on mobile
Differential Revision:	D57739

--- a/website/themes/beastie/assets/styles/main.css
+++ b/website/themes/beastie/assets/styles/main.css
@@ -732,7 +732,7 @@ input[type='checkbox'] {
   }
 
   .sub-menu .title {
-    display: none;
+    display: block;
     border-bottom: none;
   }
 
